--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                 <h2>兩把刷子</h2>
               </header>
               <p> 
-                
+                最初由於髮型的關係，我被同學們取了綽號，稱之為「刷子」。不過這個綽號帶來的，更多是對於自己的期許。
+                <br>「兩把刷子」，被大家廣為使用於形容一人具備能力，有所成就的人。
+                因此我決定欣然接受，並以此為目標持續努力，成為一位足以被大家稱之為「兩把刷子」的人。
+                <br>也是因為這樣的原因，我選擇將網站的名字取為「I have 2 brush」以提醒我並激勵我持續努力的方向。
               </p>
             </div>
           </div>
@@ -120,8 +123,8 @@
                 注重細節
               </h3>
               <p>
-                <br>「注重細節，追逐完美」一直是我的做事態度。
-                無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
+                「注重細節，追逐完美」一直是我的做事態度。
+                <br>無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
                 更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
                 
               </p>             
