--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div>
           <div class="box">
             <div class="image fit">
-              <img src="images/pic03.jpg" alt="" />
+              <img src="images/personality.png" alt="" />
             </div>
             <div class="content">
               <header class="align-center">
