--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="gallery">
         <div>
           <div class="image fit">
-            <a href="#"><img src="images/pic01.jpg" alt="" /></a>
+            <a href="Inquiry_and_Practice.html"><img src="images/pic01.jpg" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
@@ -179,7 +179,7 @@
         </div>
         <div>
           <div class="image fit">
-            <a href="#"><img src="images/pic03.jpg" alt="" /></a>
+            <a href="School_Carnivals.html"><img src="images/pic03.jpg" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
@@ -189,7 +189,7 @@
         </div>
         <div>
           <div class="image fit">
-            <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+            <a href="physical.html"><img src="images/pic04.jpg" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
@@ -199,7 +199,7 @@
         </div>
         <div>
           <div class="image fit">
-            <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+            <a href="information_technology.html"><img src="images/pic04.jpg" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
