--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div>
           <div class="box">
             <div class="image fit">
-              <img src="images/pic02.jpg" alt="" />
+              <img src="images/me.jpg" alt="" />
             </div>
             <div class="content">
               <header class="align-center">
