--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
         <div>
           <div class="image fit">
-            <a href="physical.html"><img src="images/doppler.jpeg" alt="" /></a>
+            <a href="physical.html"><img src="images/doppler.png" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
