--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="gallery">
         <div>
           <div class="image fit">
-            <a href="Inquiry_and_Practice.html"><img src="images/pic01.jpg" alt="" /></a>
+            <a href="Inquiry_and_Practice.html"><img src="images/science.png" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
