--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         <div>
           <div class="image fit">
-            <a href="School_Carnivals.html"><img src="images/MeowEats.png" alt="" /></a>
+            <a href="School_Carnivals.html"><img src="images/ad.png" alt="" /></a>
           </div>
           <div class="content">
             <header class="align-center">
