--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <img src="images/slide01.jpg" alt="" />
       <div class="inner">
         <header>
-          <p> 許宸碩的個人網站</p>
-          <h2>I have 2 brush</h2>
+          <p> I have 2 brush</p>
+          <h2>許宸碩的個人網站</h2>
         </header>
       </div>
     </article>
