--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
         <div>
           <div class="box">
-            
+            <div class="image fit">
+              <img src="images/me.jpg" alt="" />
+            </div>
             <div class="content">
               <header class="align-center">
                 <p>不一樣的綽號</p>
@@ -73,7 +75,9 @@
 
         <div>
           <div class="box">
-            
+            <div class="image fit">
+              <img src="images/personality.png" alt="" />
+            </div>
             <div class="content">
               <header class="align-center">
                 <p>獨有的特質</p>
