--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
               </header>
               <p> 
                 最初由於髮型的關係，我被同學們取了綽號，稱之為「刷子」。不過這個綽號帶來的，更多是對於自己的期許。
-                <p>
-                  「兩把刷子」，被大家廣為使用於形容一人具備能力，有所成就的人。
-                </p>
-                  因此我決定欣然接受，並以此為目標持續努力，成為一位足以被大家稱之為「兩把刷子」的人。
-                <br>也是因為這樣的原因，我選擇將網站的名字取為「I have 2 brush」以提醒我並激勵我持續努力的方向。
+                <br>「兩把刷子」，被大家廣為使用於形容一人具備能力，有所成就的人。
+                因此我決定欣然接受，並以此為目標持續努力，成為一位足以被大家稱之為「兩把刷子」的人。
+                <br><br>也是因為這樣的原因，我選擇將網站的名字取為「I have 2 brush」以提醒我並激勵我持續努力的方向。
               </p>
             </div>
           </div>
